[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_nirbyoleek"
version = "0.0.1"
authors = [
  { name="Nirbyoleek Das", email="nirbyoleek.das@tigeranayltics.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nirbyoleek-tigeranalytics/sample_project"
Issues = "https://github.com/nirbyoleek-tigeranalytics/sample_project/issues"